# voiceprint-asr-platform

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml
.claude/: settings.local.json
.playwright-mcp/: page-2026-04-20T10-00-07-453Z.yml  page-2026-04-20T10-00-23-311Z.yml  page-2026-04-20T10-02-11-729Z.yml  page-2026-04-20T10-02-21-762Z.yml  page-2026-04-20T10-02-49-647Z.yml  page-2026-04-20T10-03-12-952Z.yml  page-2026-04-20T10-03-44-461Z.yml  page-2026-04-20T10-04-12-340Z.yml  page-2026-04-20T10-05-15-294Z.yml  page-2026-04-20T10-05-46-804Z.yml  page-2026-04-20T10-06-08-892Z.yml  page-2026-04-20T10-06-29-316Z.yml  page-2026-04-20T10-06-39-330Z.yml  page-2026-04-20T10-06-49-295Z.yml  page-2026-04-20T10-39-27-901Z.yml  page-2026-04-20T10-39-37-919Z.yml  page-2026-04-20T10-40-00-974Z.yml  page-2026-04-20T10-40-10-997Z.yml  page-2026-04-20T10-40-32-982Z.yml  page-2026-04-20T10-41-03-336Z.yml  page-2026-04-20T10-42-34-568Z.yml  page-2026-04-20T10-42-44-591Z.yml  page-2026-04-20T10-43-03-186Z.yml  page-2026-04-20T10-45-06-558Z.yml  page-2026-04-21T02-16-28-536Z.yml  page-2026-04-21T02-17-25-552Z.yml  page-2026-04-21T02-17-29-427Z.yml  page-2026-04-21T02-17-51-579Z.yml  page-2026-04-21T02-18-02-068Z.yml  page-2026-04-21T02-18-28-753Z.yml  page-2026-04-21T02-18-32-761Z.yml  page-2026-04-21T02-46-59-963Z.yml  page-2026-04-21T02-47-02-973Z.yml  page-2026-04-21T02-47-49-080Z.yml  page-2026-04-21T02-48-02-704Z.yml  page-2026-04-21T02-48-34-968Z.yml  page-2026-04-21T02-49-00-346Z.yml  page-2026-04-21T02-49-13-588Z.yml  page-2026-04-21T02-49-17-564Z.yml  page-2026-04-21T02-49-21-569Z.yml  (+9 more)
migrations/: README.md
scripts/: artifact_paths.py  benchmark_funasr_against_reference.py  check_models.py  compare_core_pipeline_baselines.py  core_pipeline_metrics.py  deployment_preflight.py  dev-docker.ps1  dev-docker.sh  download_models.py  evaluate_core_pipeline.py  evaluate_core_pipeline_dataset.py  export_readable_transcript.py  export_reference_slice.py  extract_hotwords_from_reference.py  generate_evaluation_annotation_templates.py  prod-up.ps1  (+3 more)
tests/: 丹山路.m4a
(+114 files in other folders)
