[project]
name = "voiceprint-asr-platform"
version = "0.1.0"
description = "Speaker recognition and speech-to-text platform with voiceprint identification and multi-speaker transcription."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.43",
  "psycopg[binary]>=3.2.9",
  "redis>=6.4.0",
  "celery>=5.3.0",
  "boto3>=1.40.16",
  "pgvector>=0.4.1",
  "numpy>=2.3.2",
  "scipy>=1.16.1",
  "soundfile>=0.13.1",
  "httpx>=0.28.1"
]

[project.optional-dependencies]
asr-funasr = [
  "funasr==1.3.1",
  "transformers>=4.55.4",
  "modelscope>=1.28.0"
]
speaker-3ds = [
  "modelscope>=1.28.0",
  "scikit-learn>=1.7.1"
]
diarization-pyannote = [
  "pyannote.audio>=4.0.1"
]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.8",
  "mypy>=1.17.1"
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "packages/python/model_adapters/src/model_adapters",
  "packages/python/domain/src/domain"
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "apps/api",
  "apps/worker",
  "packages/python/model_adapters/src",
  "packages/python/domain/src"
]
asyncio_mode = "auto"
testpaths = ["tests/unit"]
norecursedirs = [
  ".git",
  ".venv",
  ".uv-cache",
  ".pytest_cache",
  "apps/web/node_modules",
  "models",
  "storage"
]
markers = [
  "integration: tests that exercise API integration or persisted state",
  "gpu: tests that require CUDA and local model artifacts"
]
tmp_path_retention_policy = "failed"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]
"packages/python/model_adapters/src/model_adapters/funasr_adapter.py" = ["E501"]
"packages/python/model_adapters/src/model_adapters/three_d_speaker_adapter.py" = ["E501"]
